UPDATE GentleBank
Javadoc fertig